--- a/main.css
+++ b/main.css
@@ -1,21 +1,69 @@
+
+  body,
+  body * {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;}
+body {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    
+}
+
 header,
 main,
 footer {
     width: 800px;
-   margin-left: calc(50% - 400px);
+    margin: 40px calc(50% - 400px); 
+    display: flex;
+    flex-direction: row;
+   /* margin-left: calc(50% - 400px);
    margin-right: calc(50% - 400px);
+   margin-top: 25px;
+   margin-bottom: 25px;  vienodai aprasoma kaip komandos taip pati ir viena */
+   ;
 }
 header {
-   margin-top: 100px;
-   background-color: rgb(230, 248, 248);
-   
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+   background-color: rgb(230, 248, 248);   
 }
+img {
+    height:30px;
+}
+nav {
+    display: flex;
+    gap: 10px;
+}
+a{
+    color: #000;
+    text-decoration: none;
+    font-size: 20px;
+} 
+a:hover{
+    text-decoration: underline;
+    color: #ff2255;
+}
+
 main {
     background-color: rgba(255, 255, 0, 0.137);
 
 }
 footer {
     background-color: rgba(153, 205, 50, 0.15);
+}
+div{
+    background-color: aqua;
+    width: 50%;
+    float: left;
+}
+p{
+    box-sizing: border-box;
+    background-color: blue;
+    width: 50%;
+    float: left;
+    margin: 0;
+    padding: 10%;
 }
 
 /* screen size 1920x1020 */
