--- a/main.css
+++ b/main.css
@@ -3,7 +3,9 @@
   body * {
     box-sizing: border-box;
     padding: 0;
-    margin: 0;}
+    margin: 0;
+    user-select: none;
+}
 body {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     
@@ -12,58 +14,82 @@ body {
 header,
 main,
 footer {
-    width: 800px;
+    width: 900px;
     margin: 40px calc(50% - 400px); 
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
    /* margin-left: calc(50% - 400px);
    margin-right: calc(50% - 400px);
    margin-top: 25px;
    margin-bottom: 25px;  vienodai aprasoma kaip komandos taip pati ir viena */
-   ;
 }
-header {
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-   background-color: rgb(230, 248, 248);   
-}
-img {
+header > img{
     height:30px;
 }
-nav {
+header > nav {
     display: flex;
     gap: 10px;
 }
-a{
+nav > a{
     color: #000;
     text-decoration: none;
     font-size: 20px;
 } 
-a:hover{
+nav > a:hover{
     text-decoration: underline;
     color: #ff2255;
 }
 
 main {
-    background-color: rgba(255, 255, 0, 0.137);
+    
+}
+main > div {
+    display: flex;
+    flex-direction: column;
+    width: 40%;
+    gap: 10px;
+    flex-wrap: wrap;
+}
+h1{
+font-size: 2em;
+}
+main > div > div{ 
+    text-decoration: none;
+    font-size: 18px;
+}
+div > a {
+    display: inline-block;
+    font-size: 1em;  /* 18px = 1em */
+    line-height: 1em;
+    padding: 1em 2.5em; 
+    background-color: #55337a;
+    color: #fff;
+    border-radius: 1.6em;
+    text-decoration: none;
+    text-transform: uppercase;
+    border: 0.1em solid #55537a;
+    user-select: none;
+}
+div > a:hover{
+    background-color: #fff;
+    color: #55337a;
+}
 
 }
+p {
+font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+a {
+font-weight: 900;
+}
+main > img { 
+    margin-left: 10px;
+};
 footer {
     background-color: rgba(153, 205, 50, 0.15);
 }
-div{
-    background-color: aqua;
-    width: 50%;
-    float: left;
-}
-p{
-    box-sizing: border-box;
-    background-color: blue;
-    width: 50%;
-    float: left;
-    margin: 0;
-    padding: 10%;
-}
+
 
 /* screen size 1920x1020 */
