--- a/css/main.css
+++ b/css/main.css
@@ -41,9 +41,19 @@ nav > a:hover{
     text-decoration: underline;
     color: #ff2255;
 }
-
-main {
-    
+h1{
+    font-weight: bold;
+}
+h1 > span{
+    display: block;
+    font-weight:normal;
+}
+h1::after {
+    content: '';
+    display: block;
+    width: 100px;
+    height: 5px;
+    background-color: #55337a;   
 }
 main > div {
     display: flex;
@@ -52,6 +62,9 @@ main > div {
     gap: 10px;
     flex-wrap: wrap;
 }
+main > img {
+    width: 55%;
+}
 h1{
 font-size: 2em;
 }
@@ -59,7 +72,7 @@ main > div > div{
     text-decoration: none;
     font-size: 18px;
 }
-div > a {
+main > div > div > a {
     display: inline-block;
     font-size: 1em;  /* 18px = 1em */
     line-height: 1em;
@@ -72,23 +85,20 @@ div > a {
     border: 0.1em solid #55537a;
     user-select: none;
 }
-div > a:hover{
+main > div > div > a:hover{
     background-color: #fff;
     color: #55337a;
-}
-
 }
 p {
 font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
-a {
-font-weight: 900;
-}
+
 main > img { 
     margin-left: 10px;
 };
 footer {
-    background-color: rgba(153, 205, 50, 0.15);
+    color: #000;
+    font-size: 150px;
 }
 
 
